test/good/automatic/base/without_input/ret_zero/0049.lat
// official test 28
int main() {
  int x;
  printInt(x);
  return 0;
}
