test/bad/automatic/base/compile_time/0032.lat
int main() {
    string a;
    a--;
    return 0;
}